--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -89,11 +89,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "2c2d5ec0-d894-46b0-8eb2-62daf7f2d9fb",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pdb\n",
     "class ComplexNumber(object):\n",
     "    def __init__(self, real, imaginary):\n",
     "        self.real = real\n",
@@ -114,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "3e621eb1-8ec7-4117-93b9-32de1b6b13c6",
    "metadata": {},
    "outputs": [],
@@ -138,10 +139,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "550fbe04-65be-4fd8-bde3-531ff7eed2f0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 -1\n"
+     ]
+    }
+   ],
    "source": [
     "first = ComplexNumber(2, 1)\n",
     "conj = first.conjugate()\n",
@@ -162,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "fb7576c6-e07c-4b6a-ad55-39fc0e57a736",
    "metadata": {},
    "outputs": [],
@@ -193,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "66213937-1248-46b9-8303-3752a634c8d4",
    "metadata": {},
    "outputs": [],
@@ -236,11 +245,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "d329772a-495f-4ae8-9fa0-e12e27359056",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pdb\n",
     "class ComplexNumber(object):\n",
     "    def __init__(self, real, imaginary):\n",
     "        self.real = real\n",
@@ -333,10 +343,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "23f019ee-c712-4092-88ad-80deda0c9ab2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ComplexNumber' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m mycn \u001b[38;5;241m=\u001b[39m \u001b[43mComplexNumber\u001b[49m(\u001b[38;5;241m2\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHi!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      2\u001b[0m othercn \u001b[38;5;241m=\u001b[39m ComplexNumber(\u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m      3\u001b[0m mycn \u001b[38;5;241m>\u001b[39m othercn\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'ComplexNumber' is not defined"
+     ]
+    }
+   ],
    "source": [
     "mycn = ComplexNumber(2,\"Hi!\")\n",
     "othercn = ComplexNumber(3, 1)\n",
@@ -519,10 +541,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "725445f7-16db-4b2e-a240-b996aff2cca4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "test_ne (__main__.TestComNum.test_ne) ... ok\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.029s\n",
+      "\n",
+      "OK\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<unittest.main.TestProgram at 0x1d5f718da90>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import unittest\n",
     "from complex import ComplexNumber\n",
@@ -609,10 +654,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "fd52c177-396d-4a84-bd19-99462f206e73",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'alternativeCode' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m----> 2\u001b[0m   \u001b[43mmyCode\u001b[49m()\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m:\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'myCode' is not defined",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m   myCode()\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m:\n\u001b[1;32m----> 4\u001b[0m   \u001b[43malternativeCode\u001b[49m()\n\u001b[0;32m      5\u001b[0m   \u001b[38;5;66;03m# We could also raise an error if we want\u001b[39;00m\n\u001b[0;32m      6\u001b[0m   \u001b[38;5;66;03m# TypeError, KeyError, etc.\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'alternativeCode' is not defined"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "  myCode()\n",
@@ -646,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
    "metadata": {},
    "outputs": [],
@@ -669,30 +730,32 @@
     "    \"\"\" \n",
     "    Read the matrix and store as part of the class object\n",
     "    \"\"\"\n",
-    "    def __init__(self, value = {}, dim=(1,1)):\n",
+    "    def __init__(self, value=None, dim=(1,1)):\n",
+    "        if value is None:\n",
+    "            value = []\n",
     "        if isinstance(value, list):\n",
     "            if len(value)>0:\n",
-    "                if type(value[0]) is int or type(value[0]) is float:\n",
+    "                if isinstance(value[0], (int, float)):\n",
     "                    row = (int, float)\n",
     "                else:\n",
     "                    row = type(value[0])\n",
     "                for i in value:\n",
-    "                    if type(i) is not int, type(i) is not float, type(i) is not list:\n",
+    "                    if not (isinstance(i, (int, float, list))):\n",
     "                        raise RuntimeError(\"Matrix is invalid. Please ensure that all elements share a type.\")\n",
     "                if row is list:\n",
     "                    lenInner = len(value[0])\n",
     "                    for i in value:\n",
-    "                        if len(i) is not lenInner:\n",
+    "                        if len(i) != lenInner:\n",
     "                            raise RuntimeError(\"Matrix is invalid. Please ensure that all rows have uniform length.\")\n",
     "                        for j in i:\n",
-    "                            if type(j) is not int and type(j) is not float:\n",
+    "                            if not isinstance(j, (int, float)):\n",
     "                                raise RuntimeError(\"Matrix is invalid. Please ensure that all elements are numeric (either float or int).\")\n",
     "                self.value = value\n",
     "                try:\n",
     "                    self.shape = (len(value), len(value[0]))\n",
     "                except:\n",
     "                    self.shape = (len(value), 1)\n",
-    "            if:\n",
+    "            else:\n",
     "                matrix = []\n",
     "                for i in range(dim[0]):\n",
     "                        row = []\n",
@@ -700,35 +763,35 @@
     "                            row.append(1)\n",
     "                        matrix.append(row)\n",
     "                                \n",
-    "                value = matrix\n",
-    "                shape = dim\n",
+    "                self.value = matrix\n",
+    "                self.shape = dim\n",
     "    \n",
     "    \"\"\"\n",
     "    Print the matrix to screen\n",
     "    \"\"\"           \n",
-    "    def __repr__(self)\n",
+    "    def __repr__(self):\n",
     "        string = \"  \"\n",
-    "        for i in range(shape[0]):\n",
-    "            if shape[1]>1:\n",
-    "                if i < shape[0]-1:\n",
+    "        for i in range(self.shape[0]):\n",
+    "            if self.shape[1]>1:\n",
+    "                if i < self.shape[0]-1:\n",
     "                    string += \"[ \"\n",
-    "                    for j in range(shape[1]):\n",
-    "                        string += str(value[i][j]) + \" \"\n",
+    "                    for j in range(self.shape[1]):\n",
+    "                        string += str(self.value[i][j]) + \" \"\n",
     "                    string += \"]\\n  \"\n",
     "                else:\n",
     "                    string += \"[ \"\n",
-    "                    for j in range(shape[1]):\n",
-    "                        string += str(value[i][j]) + \" \"\n",
+    "                    for j in range(self.shape[1]):\n",
+    "                        string += str(self.value[i][j]) + \" \"\n",
     "            else:\n",
-    "                if shape[0]==1:\n",
+    "                if self.shape[0]==1:\n",
     "                    string += \"[ \"\n",
-    "                if i < shape[0]-1:\n",
-    "                    if shape[1]>1:\n",
+    "                if i < self.shape[0]-1:\n",
+    "                    if self.shape[1]>1:\n",
     "                        string += \"[ \"\n",
-    "                    string += str(value[i]) + \"\\n  \"\n",
+    "                    string += str(self.value[i]) + \"\\n  \"\n",
     "                else:\n",
-    "                    string += str(value[i]) + \" \"\n",
-    "        if shape[1]>1:\n",
+    "                    string += str(self.value[i]) + \" \"\n",
+    "        if self.shape[1]>1:\n",
     "            string += \"]\\n\\n\"\n",
     "        return string"
    ]
@@ -750,7 +813,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
